<resources>
    <string name="app_name">VolunteerSystem</string>
    <!-- Strings related to login -->
    <string name="title_welcome">Welcome</string>

    <string name="prompt_user_name">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_login_in">登录</string>

    <string name="action_switch_user">切换用户</string>
    <string name="title_activity_main">志愿者服务系统</string>
    <string name="title_child">精彩专栏</string>
    <string name="title_volunteer_garden">志愿者花园</string>
    <string name="title_registration">我的志愿活动</string>

    <string name="prompt_theme">主题</string>
    <string name="prompt_max_num">人数上限</string>
    <string name="prompt_current_num">当前人数</string>
    <string name="prompt_location">活动地点</string>
    <string name="prompt_start_time">开始时间</string>
    <string name="prompt_end_time">截止时间</string>
    <string name="action_check_detail">查看详情</string>
    <string name="action_sign_up">报名参加</string>

    <string name="prompt_splendid_video">精彩视频</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
