<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="data"
            type="com.oplw.volunteersystem.viewmodel.LoginViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/login_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:onClick="onRootViewTouched">

        <RelativeLayout
            android:id="@+id/login_top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_top"
            android:visibility="visible"
            android:layout_weight="1">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/login_top_lottie"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/login_top_loading_result_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_top_lottie"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/login_successful_lottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="5dp"
            android:padding="@dimen/root_container_padding"
            android:background="@drawable/bg_login_bottom"
            android:visibility="invisible"
            android:animateLayoutChanges="true"
            tools:context=".ui.LoginActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_name_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:visibility="@{data.isLogin? View.GONE : View.VISIBLE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login_email_TIL">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={data.name}"
                    android:textSize="@dimen/text_mid_size"
                    android:hint="@string/prompt_user_name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/login_password_TIL"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={data.email}"
                    android:textSize="@dimen/text_mid_size"
                    android:hint="@string/prompt_email"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login_confirm_password_TIL">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={data.password}"
                    android:textSize="@dimen/text_mid_size"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_confirm_password_TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="@{data.isLogin? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toTopOf="@id/login_login_or_sign_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={data.confirmPassword}"
                    android:textSize="@dimen/text_mid_size"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_login_or_sign_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="5dp"
                android:text="@{data.isLogin? @string/action_sign_in : @string/action_login_in}"
                android:textSize="@dimen/text_min_size"
                android:textColor="@color/colorAccent"
                android:onClick="@{() -> data.changeState()}"
                app:layout_constraintStart_toStartOf="@id/login_sign_in_button"
                app:layout_constraintBottom_toTopOf="@id/login_sign_in_button" />

            <Button
                android:id="@+id/login_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_common_btn"
                android:text="@{data.isLogin? @string/action_login_in : @string/action_sign_in}"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_large_size"
                android:textStyle="bold"
                android:onClick="@{() -> data.doAction()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>